crates/solidity/testing/snapshots/bindings_output/structs/simple/generated/v1/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Identifier or OpenBracket.
   ╭─[input.sol:3:17]
   │
 3 │         address payable beneficiary;
   │                 ─────────┬─────────  
   │                          ╰─────────── Error occurred here.
───╯
Error: Expected CloseParen or Comma.
   ╭─[input.sol:7:34]
   │
 7 │     function newCampaign(address payable beneficiary, uint goal) public {
   │                                  ───────────────┬──────────────  
   │                                                 ╰──────────────── Error occurred here.
───╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract CrowdFunding {
    │          ──────┬─────  
    │                ╰─────── name: 1
  2 │     struct Campaign {
    │            ────┬───  
    │                ╰───── name: 2
    │ 
  4 │         uint fundingGoal;
    │              ─────┬─────  
    │                   ╰─────── name: 3
    │ 
  7 │     function newCampaign(address payable beneficiary, uint goal) public {
    │              ─────┬─────  
    │                   ╰─────── name: 4
  8 │         Campaign storage c;
    │         ────┬───         ┬  
    │             ╰─────────────── ref: 2
    │                          │  
    │                          ╰── name: 5
  9 │         c.beneficiary = beneficiary;
    │         ┬ ─────┬─────   ─────┬─────  
    │         ╰──────────────────────────── ref: 5
    │                │             │       
    │                ╰───────────────────── unresolved
    │                              │       
    │                              ╰─────── unresolved
 10 │         c.fundingGoal = goal;
    │         ┬ ─────┬─────   ──┬─  
    │         ╰───────────────────── ref: 5
    │                │          │   
    │                ╰────────────── ref: 3
    │                           │   
    │                           ╰─── unresolved
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ ╭───│ ▶ contract CrowdFunding {
  2 │ │   ╭─▶     struct Campaign {
    ┆ ┆   ┆   
  4 │ │   │           uint fundingGoal;
    │ │   │   ─────────────┬────────────  
    │ │   │                ╰────────────── definiens: 3
  5 │ │ │ ├─▶     }
    │ │ │ │           
    │ │ │ ╰─────────── definiens: 2
  6 │ │ ╭───▶ 
    ┆ ┆ ┆     
  8 │ │ │             Campaign storage c;
    │ │ │     ──────────────┬─────────────  
    │ │ │                   ╰─────────────── definiens: 5
    ┆ ┆ ┆     
 11 │ │ ├───▶     }
    │ │ │             
    │ │ ╰───────────── definiens: 4
 12 │ ├─────▶ }
    │ │           
    │ ╰─────────── definiens: 1
────╯
